/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    implementation 'org.apache.spark:spark-core_2.13:3.5.1'
    implementation 'org.apache.spark:spark-sql_2.13:3.5.0'
    implementation 'org.apache.spark:spark-mllib_2.13:3.5.0'
    implementation 'com.github.rholder:snowball-stemmer:1.3.0.581.1'

    // Jetty for web server
    implementation 'org.eclipse.jetty:jetty-server:9.4.48.v20220622'
    implementation 'org.eclipse.jetty:jetty-servlet:9.4.48.v20220622'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    // Jackson for JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.3'

}
mainClassName = 'org.mendeley.WebApp'
jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}

shadowJar {
    archiveBaseName.set('mendeley-web')
    archiveClassifier.set('all')
    archiveVersion.set('')
    zip64 true
    mergeServiceFiles()
    dependencies {
        exclude(dependency("jakarta.servlet:jakarta.servlet-api"))
    }
}

tasks.build.dependsOn(shadowJar)
// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClass = 'org.mendeley.Main'
    applicationDefaultJvmArgs = [
        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
    ]
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
